chore: apply sane default config to proxy container